@@ -8,6 +8,7 @@ o Support for alternative stubs for js_of_ocaml
 o Push mk_id down to pdf_to_output so it works when writing to
   non-file destinations
 o Fix Pdf.getnum and Pdf.parse_rectangle to cope with indirects
+o Merge /StructTreeRoot entries (Structure hierarchy / Tagged PDF)
 
 2.5 (January 2022)
 
